--- a/python/static/main.css
+++ b/python/static/main.css
@@ -14,7 +14,9 @@
 	display: inline-block;
 	margin-bottom: 1ex;
 	padding: 5px;
+	direction: rtl;
 }
+
 #scores  {
 	margin-left: 1em;
 }
@@ -27,6 +29,7 @@
 .digitsblock input, #chrono input {
 	text-align: center;
 }
+
 #headerwrapper {
 	/*display: inline-block;
 	position: relative;*/
@@ -36,6 +39,7 @@
 	position: relative;
 	display: inline-block;
 }
+
 .title {
 	vertical-align: middle;
 	font-size: 3ex;
@@ -58,6 +62,7 @@
 	position: relative;
 	right: 0;
 }
+
 #scores > div {
 	display: inline-block;
 	border: solid 1px;
@@ -69,6 +74,22 @@ label {
 input {
 	width: 3em;
 }
+
+.vertical .digitsblock * ,
+.vertical #chrono > * ,
+.vertical .title {
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+#chrono > * {
+	margin: 0 0.3ex;
+}
+
+#timeout.play {
+	border: solid 0.5ex red;
+}
+
 /* icons */
 img {
 	width: 3ex;
